tests/Config/Parser/fixtures/annotations/Invalid/InvalidAccess.php
<?php

declare(strict_types=1);

namespace Overblog\GraphQLBundle\Tests\Config\Parser\fixtures\annotations\Invalid;

use Overblog\GraphQLBundle\Annotation as GQL;

/**
 * @GQL\Type
 */
class InvalidAccess
{
    /**
     * @GQL\Access()
     */
    protected string $field;
}
